--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,201 +1,226 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.w3.org/1999/xhtml" lang="en">
+<html xmlns:th="http://www.thymeleaf.org" lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css"
+          integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+          integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" th:href="@{/assets/css/styles.css}"/>
     <link rel="stylesheet" th:href="@{/assets/img}"/>
 
-  <title>Document</title>
+    <title>Document</title>
 </head>
 <body>
-  <!-- Navbar -->
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-      <a class="navbar-brand" href="#">Navbar</a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-      </button>
+<!-- Navbar -->
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <a class="navbar-brand" href="#">Navbar</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
 
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav mr-auto">
-              <li class="nav-item active">
-                  <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-              </li>
-              <li class="nav-item">
-                  <a class="nav-link" href="#">Link</a>
-              </li>
-              <li class="nav-item dropdown">
-                  <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                      Dropdown
-                  </a>
-                  <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                      <a class="dropdown-item" href="#">Action</a>
-                      <a class="dropdown-item" href="#">Another action</a>
-                      <div class="dropdown-divider"></div>
-                      <a class="dropdown-item" href="#">Something else here</a>
-                  </div>
-              </li>
-              <li class="nav-item">
-                  <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-              </li>
-          </ul>
-          <form class="form-inline my-2 my-lg-0">
-              <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-              <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-          </form>
-      </div>
-  </nav>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav mr-auto">
+            <li class="nav-item active">
+                <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">Link</a>
+            </li>
+            <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
+                   aria-haspopup="true" aria-expanded="false">
+                    Dropdown
+                </a>
+                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                    <a class="dropdown-item" href="#">Action</a>
+                    <a class="dropdown-item" href="#">Another action</a>
+                    <div class="dropdown-divider"></div>
+                    <a class="dropdown-item" href="#">Something else here</a>
+                </div>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+            </li>
+        </ul>
+        <form class="form-inline my-2 my-lg-0">
+            <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+        </form>
+    </div>
+</nav>
 
 <!-- Jumbotron -->
 <div class="jumbotron jumbotron-fluid">
     <div class="container" style="text-align:center">
-      <h1 class="display-4">MLB Dashboard</h1>
-      <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
-      <hr class="my-4">
-      <a class="btn btn-primary btn-lg" href="#" role="button">Github Repo</a>
+        <h1 class="display-4">MLB Dashboard</h1>
+        <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to
+            featured content or information.</p>
+        <hr class="my-4">
+        <a class="btn btn-primary btn-lg" href="#" role="button">Github Repo</a>
     </div>
-  </div>
+</div>
 
 <!-- Nav -->
 <div class="container">
-  <ul class="nav nav-pills justify-content-center">
-      <li class="nav-item">
-        <a class="nav-link home active" href="#">Teams</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link schedule" href="#">Daily Schedule</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link standings" href="#">Standings</a>
-      </li>
-      <li class="nav-item">
-          <a class="nav-link news" href="#">News</a>
+    <ul class="nav nav-pills justify-content-center">
+        <li class="nav-item">
+            <a class="nav-link home active" href="#">Teams</a>
         </li>
-  </ul>
-  <hr id="main">
+        <li class="nav-item">
+            <a class="nav-link schedule" href="#">Daily Schedule</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link standings" href="#">Standings</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link news" href="#">News</a>
+        </li>
+    </ul>
+    <hr id="main">
 </div>
 
 <!-- Main Content -->
 <div class="container main">
     <div id="teams">
-    <div class="row">
+        <div class="row">
             <div class="col-md-3 col-sm-6 col-xs-12">
-                <button type="submit" value="Submit"><img th:src="@{/assets/img/arz.png}" class="img-thumbnail"></button>
+                <button type="submit" value="Submit"><img th:src="@{/assets/img/arz.png}" class="img-thumbnail">
+                </button>
             </div>
             <div class="col-md-3 col-sm-6 col-xs-12">
-                <button type="submit" value="Submit"><img th:src="@{/assets/img/atl.png}" class="img-thumbnail"></button>
+                <button type="submit" value="Submit"><img th:src="@{/assets/img/atl.png}" class="img-thumbnail">
+                </button>
             </div>
             <div class="col-md-3 col-sm-6 col-xs-12">
-                <button type="submit" value="Submit"><img th:src="@{/assets/img/balt.png}" class="img-thumbnail"></button>
+                <button type="submit" value="Submit"><img th:src="@{/assets/img/balt.png}" class="img-thumbnail">
+                </button>
             </div>
             <div class="col-md-3 col-sm-6 col-xs-12">
-                <button type="submit" value="Submit"><img th:src="@{/assets/img/bos.png}" class="img-thumbnail"></button>
+                <button type="submit" value="Submit"><img th:src="@{/assets/img/bos.png}" class="img-thumbnail">
+                </button>
             </div>
             <div class="col-md-3 col-sm-6 col-xs-12">
-                <button type="submit" value="Submit"><img th:src="@{/assets/img/chc.png}" class="img-thumbnail"></button>
+                <button type="submit" value="Submit"><img th:src="@{/assets/img/chc.png}" class="img-thumbnail">
+                </button>
             </div>
             <div class="col-md-3 col-sm-6 col-xs-12">
-                <button type="submit" value="Submit"><img th:src="@{/assets/img/chis.png}" class="img-thumbnail"></button>
+                <button type="submit" value="Submit"><img th:src="@{/assets/img/chis.png}" class="img-thumbnail">
+                </button>
             </div>
             <div class="col-md-3 col-sm-6 col-xs-12">
-                <button type="submit" value="Submit"><img th:src="@{/assets/img/cin.png}" class="img-thumbnail"></button>
+                <button type="submit" value="Submit"><img th:src="@{/assets/img/cin.png}" class="img-thumbnail">
+                </button>
             </div>
             <div class="col-md-3 col-sm-6 col-xs-12">
-                <button type="submit" value="Submit"><img th:src="@{/assets/img/cle.png}" class="img-thumbnail"></button>
+                <button type="submit" value="Submit"><img th:src="@{/assets/img/cle.png}" class="img-thumbnail">
+                </button>
             </div>
             <div class="col-md-3 col-sm-6 col-xs-12">
-                <button type="submit" value="Submit"><img th:src="@{/assets/img/col.png}" class="img-thumbnail"></button>
+                <button type="submit" value="Submit"><img th:src="@{/assets/img/col.png}" class="img-thumbnail">
+                </button>
             </div>
             <div class="col-md-3 col-sm-6 col-xs-12">
-                <button type="submit" value="Submit"><img th:src="@{/assets/img/det.png}" class="img-thumbnail"></button>
+                <button type="submit" value="Submit"><img th:src="@{/assets/img/det.png}" class="img-thumbnail">
+                </button>
             </div>
             <div class="col-md-3 col-sm-6 col-xs-12">
-                <button type="submit" value="Submit"><img th:src="@{/assets/img/hou.png}" class="img-thumbnail"></button>
+                <button type="submit" value="Submit"><img th:src="@{/assets/img/hou.png}" class="img-thumbnail">
+                </button>
             </div>
             <div class="col-md-3 col-sm-6 col-xs-12">
-                <button type="submit" value="Submit"><img th:src="@{/assets/img/kcr.png}" class="img-thumbnail"></button>
+                <button type="submit" value="Submit"><img th:src="@{/assets/img/kcr.png}" class="img-thumbnail">
+                </button>
             </div>
             <div class="col-md-3 col-sm-6 col-xs-12">
-                <button type="submit" value="Submit"><img th:src="@{/assets/img/laa.png}" class="img-thumbnail"></button>
+                <button type="submit" value="Submit"><img th:src="@{/assets/img/laa.png}" class="img-thumbnail">
+                </button>
             </div>
             <div class="col-md-3 col-sm-6 col-xs-12">
-                <button type="submit" value="Submit"><img th:src="@{/assets/img/lad.png}" class="img-thumbnail"></button>
+                <button type="submit" value="Submit"><img th:src="@{/assets/img/lad.png}" class="img-thumbnail">
+                </button>
             </div>
             <div class="col-md-3 col-sm-6 col-xs-12">
-                <button type="submit" value="Submit"><img th:src="@{/assets/img/mia.png}" class="img-thumbnail"></button>
+                <button type="submit" value="Submit"><img th:src="@{/assets/img/mia.png}" class="img-thumbnail">
+                </button>
             </div>
             <div class="col-md-3 col-sm-6 col-xs-12">
-                <button type="submit" value="Submit"><img th:src="@{/assets/img/mil.png}" class="img-thumbnail"></button>
+                <button type="submit" value="Submit"><img th:src="@{/assets/img/mil.png}" class="img-thumbnail">
+                </button>
             </div>
             <div class="col-md-3 col-sm-6 col-xs-12">
-                <button type="submit" value="Submit"><img th:src="@{/assets/img/min.png}" class="img-thumbnail"></button>
+                <button type="submit" value="Submit"><img th:src="@{/assets/img/min.png}" class="img-thumbnail">
+                </button>
             </div>
             <div class="col-md-3 col-sm-6 col-xs-12">
-                <button type="submit" value="Submit"><img th:src="@{/assets/img/nym.png}" class="img-thumbnail"></button>
+                <button type="submit" value="Submit"><img th:src="@{/assets/img/nym.png}" class="img-thumbnail">
+                </button>
             </div>
             <div class="col-md-3 col-sm-6 col-xs-12">
-                <button type="submit" value="Submit"><img th:src="@{/assets/img/nyy.png}" class="img-thumbnail"></button>
+                <button type="submit" value="Submit"><img th:src="@{/assets/img/nyy.png}" class="img-thumbnail">
+                </button>
             </div>
             <div class="col-md-3 col-sm-6 col-xs-12">
-                <button type="submit" value="Submit"><img th:src="@{/assets/img/oak.png}" class="img-thumbnail"></button>
+                <button type="submit" value="Submit"><img th:src="@{/assets/img/oak.png}" class="img-thumbnail">
+                </button>
             </div>
             <div class="col-md-3 col-sm-6 col-xs-12">
-                <button type="submit" value="Submit"><img th:src="@{/assets/img/phil.png}" class="img-thumbnail"></button>
+                <button type="submit" value="Submit"><img th:src="@{/assets/img/phil.png}" class="img-thumbnail">
+                </button>
             </div>
             <div class="col-md-3 col-sm-6 col-xs-12">
-                <button type="submit" value="Submit"><img th:src="@{/assets/img/pit.png}" class="img-thumbnail"></button>
+                <button type="submit" value="Submit"><img th:src="@{/assets/img/pit.png}" class="img-thumbnail">
+                </button>
             </div>
             <div class="col-md-3 col-sm-6 col-xs-12">
                 <button type="submit" value="Submit"><img th:src="@{/assets/img/sd.png}" class="img-thumbnail"></button>
             </div>
             <div class="col-md-3 col-sm-6 col-xs-12">
-                <button type="submit" value="Submit"><img th:src="@{/assets/img/sea.png}" class="img-thumbnail"></button>
+                <button type="submit" value="Submit"><img th:src="@{/assets/img/sea.png}" class="img-thumbnail">
+                </button>
             </div>
             <div class="col-md-3 col-sm-6 col-xs-12">
                 <button type="submit" value="Submit"><img th:src="@{/assets/img/sf.png}" class="img-thumbnail"></button>
             </div>
             <div class="col-md-3 col-sm-6 col-xs-12">
-                <button type="submit" value="Submit"><img th:src="@{/assets/img/stl.png}" class="img-thumbnail"></button>
+                <button type="submit" value="Submit"><img th:src="@{/assets/img/stl.png}" class="img-thumbnail">
+                </button>
             </div>
             <div class="col-md-3 col-sm-6 col-xs-12">
-                <button type="submit" value="Submit"><img th:src="@{/assets/img/tbr.png}" class="img-thumbnail"></button>
+                <button type="submit" value="Submit"><img th:src="@{/assets/img/tbr.png}" class="img-thumbnail">
+                </button>
             </div>
             <div class="col-md-3 col-sm-6 col-xs-12">
-                <button type="submit" value="Submit"><img th:src="@{/assets/img/tex.png}" class="img-thumbnail"></button>
+                <button type="submit" value="Submit"><img th:src="@{/assets/img/tex.png}" class="img-thumbnail">
+                </button>
             </div>
             <div class="col-md-3 col-sm-6 col-xs-12">
-                <button type="submit" value="Submit"><img th:src="@{/assets/img/tor.png}" class="img-thumbnail"></button>
+                <button type="submit" value="Submit"><img th:src="@{/assets/img/tor.png}" class="img-thumbnail">
+                </button>
             </div>
             <div class="col-md-3 col-sm-6 col-xs-12">
-                <button type="submit" value="Submit"><img th:src="@{/assets/img/was.png}" class="img-thumbnail"></button>
+                <button type="submit" value="Submit"><img th:src="@{/assets/img/was.png}" class="img-thumbnail">
+                </button>
             </div>
+        </div>
     </div>
-
-  </div>
 </div>
-
-
-
-
-
-
-
-
-
-
-
 
 
 </body>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+        crossorigin="anonymous"></script>
 
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+        crossorigin="anonymous"></script>
 
 <script th:src="@{/assets/js/dashboard.js}"></script>
 
