Completed individual team page.

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -88,122 +88,122 @@
     <div id="teams">
         <div class="row">
             <div class="col-md-3 col-sm-6 col-xs-12">
-                <button type="submit" value="Submit"><img th:src="@{/assets/img/arz.png}" class="img-thumbnail">
-                </button>
+                <a th:href="@{|/team/${'ARI'}/${109}|}"><img th:src="@{/assets/img/ARI.png}" class="img-thumbnail">
+                </a>
             </div>
             <div class="col-md-3 col-sm-6 col-xs-12">
-                <button type="submit" value="Submit"><img th:src="@{/assets/img/atl.png}" class="img-thumbnail">
-                </button>
+                <a th:href="@{|/team/${'ATL'}/${144}|}"><img th:src="@{/assets/img/ATL.png}" class="img-thumbnail">
+                </a>
             </div>
             <div class="col-md-3 col-sm-6 col-xs-12">
-                <button type="submit" value="Submit"><img th:src="@{/assets/img/balt.png}" class="img-thumbnail">
-                </button>
+                <a th:href="@{|/team/${'BAL'}/${110}|}"><img th:src="@{/assets/img/BAL.png}" class="img-thumbnail">
+                </a>
             </div>
             <div class="col-md-3 col-sm-6 col-xs-12">
-                <button type="submit" value="Submit"><img th:src="@{/assets/img/bos.png}" class="img-thumbnail">
-                </button>
+                <a th:href="@{|/team/${'BOS'}/${111}|}"><img th:src="@{/assets/img/BOS.png}" class="img-thumbnail">
+                </a>
             </div>
             <div class="col-md-3 col-sm-6 col-xs-12">
-                <button type="submit" value="Submit"><img th:src="@{/assets/img/chc.png}" class="img-thumbnail">
-                </button>
+                <a th:href="@{|/team/${'CHC'}/${112}|}"><img th:src="@{/assets/img/CHC.png}" class="img-thumbnail">
+                </a>
             </div>
             <div class="col-md-3 col-sm-6 col-xs-12">
-                <button type="submit" value="Submit"><img th:src="@{/assets/img/chis.png}" class="img-thumbnail">
-                </button>
+                <a th:href="@{|/team/${'CWS'}/${145}|}"><img th:src="@{/assets/img/CWS.png}" class="img-thumbnail">
+                </a>
             </div>
             <div class="col-md-3 col-sm-6 col-xs-12">
-                <button type="submit" value="Submit"><img th:src="@{/assets/img/cin.png}" class="img-thumbnail">
-                </button>
+                <a th:href="@{|/team/${'CIN'}/${113}|}"><img th:src="@{/assets/img/CIN.png}" class="img-thumbnail">
+                </a>
             </div>
             <div class="col-md-3 col-sm-6 col-xs-12">
-                <button type="submit" value="Submit"><img th:src="@{/assets/img/cle.png}" class="img-thumbnail">
-                </button>
+                <a th:href="@{|/team/${'CLE'}/${114}|}"><img th:src="@{/assets/img/CLE.png}" class="img-thumbnail">
+                </a>
             </div>
             <div class="col-md-3 col-sm-6 col-xs-12">
-                <button type="submit" value="Submit"><img th:src="@{/assets/img/col.png}" class="img-thumbnail">
-                </button>
+                <a th:href="@{|/team/${'COL'}/${115}|}"><img th:src="@{/assets/img/COL.png}" class="img-thumbnail">
+                </a>
             </div>
             <div class="col-md-3 col-sm-6 col-xs-12">
-                <button type="submit" value="Submit"><img th:src="@{/assets/img/det.png}" class="img-thumbnail">
-                </button>
+                <a th:href="@{|/team/${'DET'}/${116}|}"><img th:src="@{/assets/img/DET.png}" class="img-thumbnail">
+                </a>
             </div>
             <div class="col-md-3 col-sm-6 col-xs-12">
-                <button type="submit" value="Submit"><img th:src="@{/assets/img/hou.png}" class="img-thumbnail">
-                </button>
+                <a th:href="@{|/team/${'HOU'}/${117}|}"><img th:src="@{/assets/img/HOU.png}" class="img-thumbnail">
+                </a>
             </div>
             <div class="col-md-3 col-sm-6 col-xs-12">
-                <button type="submit" value="Submit"><img th:src="@{/assets/img/kcr.png}" class="img-thumbnail">
-                </button>
+                <a th:href="@{|/team/${'KC'}/${118}|}"><img th:src="@{/assets/img/KC.png}" class="img-thumbnail">
+                </a>
             </div>
             <div class="col-md-3 col-sm-6 col-xs-12">
-                <button type="submit" value="Submit"><img th:src="@{/assets/img/laa.png}" class="img-thumbnail">
-                </button>
+                <a th:href="@{|/team/${'LAA'}/${108}|}"><img th:src="@{/assets/img/LAA.png}" class="img-thumbnail">
+                </a>
             </div>
             <div class="col-md-3 col-sm-6 col-xs-12">
-                <button type="submit" value="Submit"><img th:src="@{/assets/img/lad.png}" class="img-thumbnail">
-                </button>
+                <a th:href="@{|/team/${'LAD'}/${119}|}"><img th:src="@{/assets/img/LAD.png}" class="img-thumbnail">
+                </a>
             </div>
             <div class="col-md-3 col-sm-6 col-xs-12">
-                <button type="submit" value="Submit"><img th:src="@{/assets/img/mia.png}" class="img-thumbnail">
-                </button>
+                <a th:href="@{|/team/${'MIA'}/${146}|}"><img th:src="@{/assets/img/MIA.png}" class="img-thumbnail">
+                </a>
             </div>
             <div class="col-md-3 col-sm-6 col-xs-12">
-                <button type="submit" value="Submit"><img th:src="@{/assets/img/mil.png}" class="img-thumbnail">
-                </button>
+                <a th:href="@{|/team/${'MIL'}/${158}|}"><img th:src="@{/assets/img/MIL.png}" class="img-thumbnail">
+                </a>
             </div>
             <div class="col-md-3 col-sm-6 col-xs-12">
-                <button type="submit" value="Submit"><img th:src="@{/assets/img/min.png}" class="img-thumbnail">
-                </button>
+                <a th:href="@{|/team/${'MIN'}/${142}|}"><img th:src="@{/assets/img/MIN.png}" class="img-thumbnail">
+                </a>
             </div>
             <div class="col-md-3 col-sm-6 col-xs-12">
-                <button type="submit" value="Submit"><img th:src="@{/assets/img/nym.png}" class="img-thumbnail">
-                </button>
+                <a th:href="@{|/team/${'NYM'}/${121}|}"><img th:src="@{/assets/img/NYM.png}" class="img-thumbnail">
+                </a>
             </div>
             <div class="col-md-3 col-sm-6 col-xs-12">
-                <button type="submit" value="Submit"><img th:src="@{/assets/img/nyy.png}" class="img-thumbnail">
-                </button>
+                <a th:href="@{|/team/${'NYY'}/${147}|}"><img th:src="@{/assets/img/NYY.png}" class="img-thumbnail">
+                </a>
             </div>
             <div class="col-md-3 col-sm-6 col-xs-12">
-                <button type="submit" value="Submit"><img th:src="@{/assets/img/oak.png}" class="img-thumbnail">
-                </button>
+                <a th:href="@{|/team/${'OAK'}/${133}|}"><img th:src="@{/assets/img/OAK.png}" class="img-thumbnail">
+                </a>
             </div>
             <div class="col-md-3 col-sm-6 col-xs-12">
-                <button type="submit" value="Submit"><img th:src="@{/assets/img/phil.png}" class="img-thumbnail">
-                </button>
+                <a th:href="@{|/team/${'PHI'}/${143}|}"><img th:src="@{/assets/img/PHI.png}" class="img-thumbnail">
+                </a>
             </div>
             <div class="col-md-3 col-sm-6 col-xs-12">
-                <button type="submit" value="Submit"><img th:src="@{/assets/img/pit.png}" class="img-thumbnail">
-                </button>
+                <a th:href="@{|/team/${'PIT'}/${134}|}"><img th:src="@{/assets/img/PIT.png}" class="img-thumbnail">
+                </a>
             </div>
             <div class="col-md-3 col-sm-6 col-xs-12">
-                <button type="submit" value="Submit"><img th:src="@{/assets/img/sd.png}" class="img-thumbnail"></button>
+                <a th:href="@{|/team/${'SD'}/${135}|}"><img th:src="@{/assets/img/SD.png}" class="img-thumbnail"></a>
             </div>
             <div class="col-md-3 col-sm-6 col-xs-12">
-                <button type="submit" value="Submit"><img th:src="@{/assets/img/sea.png}" class="img-thumbnail">
-                </button>
+                <a th:href="@{|/team/${'SEA'}/${136}|}"><img th:src="@{/assets/img/SEA.png}" class="img-thumbnail">
+                </a>
             </div>
             <div class="col-md-3 col-sm-6 col-xs-12">
-                <button type="submit" value="Submit"><img th:src="@{/assets/img/sf.png}" class="img-thumbnail"></button>
+                <a th:href="@{|/team/${'SF'}/${137}|}"><img th:src="@{/assets/img/SF.png}" class="img-thumbnail"></a>
             </div>
             <div class="col-md-3 col-sm-6 col-xs-12">
-                <button type="submit" value="Submit"><img th:src="@{/assets/img/stl.png}" class="img-thumbnail">
-                </button>
+                <a th:href="@{|/team/${'STL'}/${138}|}"><img th:src="@{/assets/img/STL.png}" class="img-thumbnail">
+                </a>
             </div>
             <div class="col-md-3 col-sm-6 col-xs-12">
-                <button type="submit" value="Submit"><img th:src="@{/assets/img/tbr.png}" class="img-thumbnail">
-                </button>
+                <a th:href="@{|/team/${'TB'}/${139}|}"><img th:src="@{/assets/img/TB.png}" class="img-thumbnail">
+                </a>
             </div>
             <div class="col-md-3 col-sm-6 col-xs-12">
-                <button type="submit" value="Submit"><img th:src="@{/assets/img/tex.png}" class="img-thumbnail">
-                </button>
+                <a th:href="@{|/team/${'TEX'}/${140}|}"><img th:src="@{/assets/img/TEX.png}" class="img-thumbnail">
+                </a>
             </div>
             <div class="col-md-3 col-sm-6 col-xs-12">
-                <button type="submit" value="Submit"><img th:src="@{/assets/img/tor.png}" class="img-thumbnail">
-                </button>
+                <a th:href="@{|/team/${'TOR'}/${141}|}"><img th:src="@{/assets/img/TOR.png}" class="img-thumbnail">
+                </a>
             </div>
             <div class="col-md-3 col-sm-6 col-xs-12">
-                <button type="submit" value="Submit"><img th:src="@{/assets/img/was.png}" class="img-thumbnail">
-                </button>
+                <a th:href="@{|/team/${'WSH'}/${120}|}"><img th:src="@{/assets/img/WSH.png}" class="img-thumbnail">
+                </a>
             </div>
         </div>
     </div>
