--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -79,6 +79,9 @@
         <li class="nav-item">
             <a class="nav-link news" href="#">News</a>
         </li>
+        <li class="nav-item">
+            <a class="nav-link leagueLeaders" href="#">League Leaders</a>
+        </li>
     </ul>
     <hr id="main">
 </div>
@@ -207,6 +210,25 @@
             </div>
         </div>
     </div>
+    <nav aria-label="breadcrumb" class="hitter" style="display: none; background-color: transparent">
+        <ol class="breadcrumb align-items-center" style="background-color: transparent">
+            <li class="breadcrumb-item hr"><a href="###">HR</a></li>
+            <li class="breadcrumb-item hits"><a href="###">Hits</a></li>
+            <li class="breadcrumb-item rbi"><a href="###">RBI</a></li>
+            <li class="breadcrumb-item avg"><a href="###">AVG</a></li>
+        </ol>
+    </nav>
+
+</div>
+<div class="container sub">
+    <nav aria-label="breadcrumb" class="pitcher" style="display: none; background-color: transparent">
+        <ol class="breadcrumb" style="background-color: transparent;">
+            <li class="breadcrumb-item wins"><a href="###">Wins</a></li>
+            <li class="breadcrumb-item strikeouts"><a href="###">Strikeouts</a></li>
+            <li class="breadcrumb-item era"><a href="###">ERA</a></li>
+            <li class="breadcrumb-item saves"><a href="###">Saves</a></li>
+        </ol>
+    </nav>
 </div>
 
 
