--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,48 +1,16 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" lang="en">
+<head th:replace="layout :: head"></head>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css"
-          integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-          integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" th:href="@{/assets/css/styles.css}"/>
-    <link rel="stylesheet" th:href="@{/assets/img}"/>
-
-    <title>Document</title>
+    <title>Baseball Dashboard</title>
 </head>
 <body>
 <!-- Navbar -->
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <a class="navbar-brand" href="#">Navbar</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-    </button>
-
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav mr-auto">
-            <li class="nav-item active">
-                <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-            </li>
-        </ul>
-        <form class="form-inline mt-2 mt-md-0" th:action="@{/playersearch}" method="get">
-            <input class="form-control mr-sm-2 input-medium  col-8" type="search" placeholder="Enter Player Name" aria-label="Search"
-                   name="search" id="search" th:value="${search}" pattern="\S+\s+\S+"
-                   oninvalid="this.setCustomValidity('Please enter a first and last name')" oninput="setCustomValidity('')">
-            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-        </form>
-    </div>
-</nav>
-
+<nav th:replace="layout :: navbar"></nav>
 <!-- Jumbotron -->
 <div class="jumbotron jumbotron-fluid">
     <div class="container" style="text-align:center">
-        <h1 class="display-4">MLB Dashboard</h1>
-        <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to
-            featured content or information.</p>
+        <h1 class="display-4">Baseball Dashboard</h1>
         <hr class="my-4">
         <a class="btn btn-primary btn-lg" href="#" role="button">Github Repo</a>
     </div>
@@ -75,121 +43,123 @@
     <div id="teams">
         <div class="row">
             <div class="col-md-3 col-sm-6 col-xs-12">
-                <a th:href="@{|/team/${'ARI'}/${109}|}"><img th:src="@{/assets/img/ARI.png}" class="img-thumbnail">
+                <a th:href="@{|/team/${'ARI'}/${109}|}"><img th:src="@{/assets/img/ARI.png}" class="img-thumbnail" data-toggle="tooltip" data-placement="top" title="Arizona Diamondbacks">
                 </a>
             </div>
             <div class="col-md-3 col-sm-6 col-xs-12">
-                <a th:href="@{|/team/${'ATL'}/${144}|}"><img th:src="@{/assets/img/ATL.png}" class="img-thumbnail">
+                <a th:href="@{|/team/${'ATL'}/${144}|}"><img th:src="@{/assets/img/ATL.png}" class="img-thumbnail"  data-toggle="tooltip" data-placement="top" title="Atlanta Braves">
                 </a>
             </div>
             <div class="col-md-3 col-sm-6 col-xs-12">
-                <a th:href="@{|/team/${'BAL'}/${110}|}"><img th:src="@{/assets/img/BAL.png}" class="img-thumbnail">
+                <a th:href="@{|/team/${'BAL'}/${110}|}"><img th:src="@{/assets/img/BAL.png}" class="img-thumbnail" data-toggle="tooltip" data-placement="top" title="Baltimore Orioles">
                 </a>
             </div>
             <div class="col-md-3 col-sm-6 col-xs-12">
-                <a th:href="@{|/team/${'BOS'}/${111}|}"><img th:src="@{/assets/img/BOS.png}" class="img-thumbnail">
+                <a th:href="@{|/team/${'BOS'}/${111}|}"><img th:src="@{/assets/img/BOS.png}" class="img-thumbnail" data-toggle="tooltip" data-placement="top" title="Boston Redsox">
                 </a>
             </div>
             <div class="col-md-3 col-sm-6 col-xs-12">
-                <a th:href="@{|/team/${'CHC'}/${112}|}"><img th:src="@{/assets/img/CHC.png}" class="img-thumbnail">
+                <a th:href="@{|/team/${'CHC'}/${112}|}"><img th:src="@{/assets/img/CHC.png}" class="img-thumbnail" data-toggle="tooltip" data-placement="top" title="Chicago Cubs">
                 </a>
             </div>
             <div class="col-md-3 col-sm-6 col-xs-12">
-                <a th:href="@{|/team/${'CWS'}/${145}|}"><img th:src="@{/assets/img/CWS.png}" class="img-thumbnail">
+                <a th:href="@{|/team/${'CWS'}/${145}|}"><img th:src="@{/assets/img/CWS.png}" class="img-thumbnail" data-toggle="tooltip" data-placement="top" title="Chicago Whitesox">
                 </a>
             </div>
             <div class="col-md-3 col-sm-6 col-xs-12">
-                <a th:href="@{|/team/${'CIN'}/${113}|}"><img th:src="@{/assets/img/CIN.png}" class="img-thumbnail">
+                <a th:href="@{|/team/${'CIN'}/${113}|}"><img th:src="@{/assets/img/CIN.png}" class="img-thumbnail" data-toggle="tooltip" data-placement="top" title="Cincinnati Reds">
                 </a>
             </div>
             <div class="col-md-3 col-sm-6 col-xs-12">
-                <a th:href="@{|/team/${'CLE'}/${114}|}"><img th:src="@{/assets/img/CLE.png}" class="img-thumbnail">
+                <a th:href="@{|/team/${'CLE'}/${114}|}"><img th:src="@{/assets/img/CLENew.png}" class="img-thumbnail" data-toggle="tooltip" data-placement="top" title="Cleveland Indians">
                 </a>
             </div>
             <div class="col-md-3 col-sm-6 col-xs-12">
-                <a th:href="@{|/team/${'COL'}/${115}|}"><img th:src="@{/assets/img/COL.png}" class="img-thumbnail">
+                <a th:href="@{|/team/${'COL'}/${115}|}"><img th:src="@{/assets/img/COL.png}" class="img-thumbnail" data-toggle="tooltip" data-placement="top" title="Colorado Rockies">
                 </a>
             </div>
             <div class="col-md-3 col-sm-6 col-xs-12">
-                <a th:href="@{|/team/${'DET'}/${116}|}"><img th:src="@{/assets/img/DET.png}" class="img-thumbnail">
+                <a th:href="@{|/team/${'DET'}/${116}|}"><img th:src="@{/assets/img/DET.png}" class="img-thumbnail" data-toggle="tooltip" data-placement="top" title="Detroit Tigers">
                 </a>
             </div>
             <div class="col-md-3 col-sm-6 col-xs-12">
-                <a th:href="@{|/team/${'HOU'}/${117}|}"><img th:src="@{/assets/img/HOU.png}" class="img-thumbnail">
+                <a th:href="@{|/team/${'HOU'}/${117}|}"><img th:src="@{/assets/img/HOUNew.png}" class="img-thumbnail" data-toggle="tooltip" data-placement="top" title="Houston Astros">
                 </a>
             </div>
             <div class="col-md-3 col-sm-6 col-xs-12">
-                <a th:href="@{|/team/${'KC'}/${118}|}"><img th:src="@{/assets/img/KC.png}" class="img-thumbnail">
+                <a th:href="@{|/team/${'KC'}/${118}|}"><img th:src="@{/assets/img/KC.png}" class="img-thumbnail" data-toggle="tooltip" data-placement="top" title="Kansas City Royals">
                 </a>
             </div>
             <div class="col-md-3 col-sm-6 col-xs-12">
-                <a th:href="@{|/team/${'LAA'}/${108}|}"><img th:src="@{/assets/img/LAA.png}" class="img-thumbnail">
+                <a th:href="@{|/team/${'LAA'}/${108}|}"><img th:src="@{/assets/img/LAA.png}" class="img-thumbnail" data-toggle="tooltip" data-placement="top" title="Los Angeles Angels">
                 </a>
             </div>
             <div class="col-md-3 col-sm-6 col-xs-12">
-                <a th:href="@{|/team/${'LAD'}/${119}|}"><img th:src="@{/assets/img/LAD.png}" class="img-thumbnail">
+                <a th:href="@{|/team/${'LAD'}/${119}|}"><img th:src="@{/assets/img/LAD.png}" class="img-thumbnail" data-toggle="tooltip" data-placement="top" title="Los Angeles Dodgers">
                 </a>
             </div>
             <div class="col-md-3 col-sm-6 col-xs-12">
-                <a th:href="@{|/team/${'MIA'}/${146}|}"><img th:src="@{/assets/img/MIA.png}" class="img-thumbnail">
+                <a th:href="@{|/team/${'MIA'}/${146}|}"><img th:src="@{/assets/img/MIA.png}" class="img-thumbnail" data-toggle="tooltip" data-placement="top" title="Miami Marlins">
                 </a>
             </div>
             <div class="col-md-3 col-sm-6 col-xs-12">
-                <a th:href="@{|/team/${'MIL'}/${158}|}"><img th:src="@{/assets/img/MIL.png}" class="img-thumbnail">
+                <a th:href="@{|/team/${'MIL'}/${158}|}"><img th:src="@{/assets/img/MIL.png}" class="img-thumbnail" data-toggle="tooltip" data-placement="top" title="Milwaukee Brewers">
                 </a>
             </div>
             <div class="col-md-3 col-sm-6 col-xs-12">
-                <a th:href="@{|/team/${'MIN'}/${142}|}"><img th:src="@{/assets/img/MIN.png}" class="img-thumbnail">
+                <a th:href="@{|/team/${'MIN'}/${142}|}"><img th:src="@{/assets/img/MIN.png}" class="img-thumbnail" data-toggle="tooltip" data-placement="top" title="Minnesota Twins">
                 </a>
             </div>
             <div class="col-md-3 col-sm-6 col-xs-12">
-                <a th:href="@{|/team/${'NYM'}/${121}|}"><img th:src="@{/assets/img/NYM.png}" class="img-thumbnail">
+                <a th:href="@{|/team/${'NYM'}/${121}|}"><img th:src="@{/assets/img/NYM.png}" class="img-thumbnail" data-toggle="tooltip" data-placement="top" title="New York Mets">
                 </a>
             </div>
             <div class="col-md-3 col-sm-6 col-xs-12">
-                <a th:href="@{|/team/${'NYY'}/${147}|}"><img th:src="@{/assets/img/NYY.png}" class="img-thumbnail">
+                <a th:href="@{|/team/${'NYY'}/${147}|}"><img th:src="@{/assets/img/NYY.png}" class="img-thumbnail" data-toggle="tooltip" data-placement="top" title="New York Yankees">
                 </a>
             </div>
             <div class="col-md-3 col-sm-6 col-xs-12">
-                <a th:href="@{|/team/${'OAK'}/${133}|}"><img th:src="@{/assets/img/OAK.png}" class="img-thumbnail">
+                <a th:href="@{|/team/${'OAK'}/${133}|}"><img th:src="@{/assets/img/OAK.png}" class="img-thumbnail" data-toggle="tooltip" data-placement="top" title="Oakland A's">
                 </a>
             </div>
             <div class="col-md-3 col-sm-6 col-xs-12">
-                <a th:href="@{|/team/${'PHI'}/${143}|}"><img th:src="@{/assets/img/PHI.png}" class="img-thumbnail">
+                <a th:href="@{|/team/${'PHI'}/${143}|}"><img th:src="@{/assets/img/PHI.png}" class="img-thumbnail" data-toggle="tooltip" data-placement="top" title="Philadelphia Phillies">
                 </a>
             </div>
             <div class="col-md-3 col-sm-6 col-xs-12">
-                <a th:href="@{|/team/${'PIT'}/${134}|}"><img th:src="@{/assets/img/PIT.png}" class="img-thumbnail">
+                <a th:href="@{|/team/${'PIT'}/${134}|}"><img th:src="@{/assets/img/PIT.png}" class="img-thumbnail" data-toggle="tooltip" data-placement="top" title="Pittsburgh Pirates">
                 </a>
             </div>
             <div class="col-md-3 col-sm-6 col-xs-12">
-                <a th:href="@{|/team/${'SD'}/${135}|}"><img th:src="@{/assets/img/SD.png}" class="img-thumbnail"></a>
-            </div>
-            <div class="col-md-3 col-sm-6 col-xs-12">
-                <a th:href="@{|/team/${'SEA'}/${136}|}"><img th:src="@{/assets/img/SEA.png}" class="img-thumbnail">
+                <a th:href="@{|/team/${'SD'}/${135}|}"><img th:src="@{/assets/img/SD.png}" class="img-thumbnail" data-toggle="tooltip" data-placement="top" title="San Diego Padres">
                 </a>
             </div>
             <div class="col-md-3 col-sm-6 col-xs-12">
-                <a th:href="@{|/team/${'SF'}/${137}|}"><img th:src="@{/assets/img/SF.png}" class="img-thumbnail"></a>
-            </div>
-            <div class="col-md-3 col-sm-6 col-xs-12">
-                <a th:href="@{|/team/${'STL'}/${138}|}"><img th:src="@{/assets/img/STL.png}" class="img-thumbnail">
+                <a th:href="@{|/team/${'SEA'}/${136}|}"><img th:src="@{/assets/img/SEANew.png}" class="img-thumbnail" data-toggle="tooltip" data-placement="top" title="Seattle Mariners">
                 </a>
             </div>
             <div class="col-md-3 col-sm-6 col-xs-12">
-                <a th:href="@{|/team/${'TB'}/${139}|}"><img th:src="@{/assets/img/TB.png}" class="img-thumbnail">
+                <a th:href="@{|/team/${'SF'}/${137}|}"><img th:src="@{/assets/img/SF.png}" class="img-thumbnail" data-toggle="tooltip" data-placement="top" title="San Francisco Giants">
                 </a>
             </div>
             <div class="col-md-3 col-sm-6 col-xs-12">
-                <a th:href="@{|/team/${'TEX'}/${140}|}"><img th:src="@{/assets/img/TEX.png}" class="img-thumbnail">
+                <a th:href="@{|/team/${'STL'}/${138}|}"><img th:src="@{/assets/img/STL.png}" class="img-thumbnail" data-toggle="tooltip" data-placement="top" title="St. Louis Cardinals">
                 </a>
             </div>
             <div class="col-md-3 col-sm-6 col-xs-12">
-                <a th:href="@{|/team/${'TOR'}/${141}|}"><img th:src="@{/assets/img/TOR.png}" class="img-thumbnail">
+                <a th:href="@{|/team/${'TB'}/${139}|}"><img th:src="@{/assets/img/TBNew.gif}" class="img-thumbnail" data-toggle="tooltip" data-placement="top" title="Tampa Bay Rays">
                 </a>
             </div>
             <div class="col-md-3 col-sm-6 col-xs-12">
-                <a th:href="@{|/team/${'WSH'}/${120}|}"><img th:src="@{/assets/img/WSH.png}" class="img-thumbnail">
+                <a th:href="@{|/team/${'TEX'}/${140}|}"><img th:src="@{/assets/img/TEX.png}" class="img-thumbnail" data-toggle="tooltip" data-placement="top" title="Texas Rangers">
+                </a>
+            </div>
+            <div class="col-md-3 col-sm-6 col-xs-12">
+                <a th:href="@{|/team/${'TOR'}/${141}|}"><img th:src="@{/assets/img/TOR.png}" class="img-thumbnail" data-toggle="tooltip" data-placement="top" title="Toronto Blue Jays">
+                </a>
+            </div>
+            <div class="col-md-3 col-sm-6 col-xs-12">
+                <a th:href="@{|/team/${'WSH'}/${120}|}"><img th:src="@{/assets/img/WSH.png}" class="img-thumbnail" data-toggle="tooltip" data-placement="top" title="Washington Nationals">
                 </a>
             </div>
         </div>
@@ -201,6 +171,9 @@
             <li class="breadcrumb-item rbi"><a href="###">RBI</a></li>
             <li class="breadcrumb-item avg"><a href="###">AVG</a></li>
         </ol>
+        <div class="loading-main" style="display: none; text-align: center">
+            <img th:src="@{/assets/img/icons/ajax-loader.gif}" height="50" width="50">
+        </div>
     </nav>
 
 </div>
@@ -212,10 +185,13 @@
             <li class="breadcrumb-item era"><a href="###">ERA</a></li>
             <li class="breadcrumb-item saves"><a href="###">Saves</a></li>
         </ol>
+        <div class="loading-sub" style="display: none; text-align: center">
+            <img th:src="@{/assets/img/icons/ajax-loader.gif}" height="50" width="50">
+        </div>
     </nav>
 </div>
 
-
+<footer th:replace="layout :: footer"></footer>
 </body>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
