Fixed issue with league leaders table not being removed and appended correctly

--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -27,7 +27,7 @@
 
 <!-- Footer -->
 <footer  style="background-color: #007bff; color: white" th:fragment="footer">
-    <div class="footer-copyright text-center py-3">Disclaimer: This site is not intended for commerical use and all team logos
+    <div class="footer-copyright text-center py-3">Disclaimer: This site is not intended for commercial use and all team logos
         are property of the respective organizations.</div>
 </footer>
 <!-- Footer -->
