--- a/src/main/resources/static/assets/css/styles.css
+++ b/src/main/resources/static/assets/css/styles.css
@@ -9,9 +9,9 @@ body {
 }
 
 footer {
-    position: absolute;
-    bottom: 0;
+    position: relative;
+    margin-top: -10px; /* negative value of footer height */
     height: 60px;
-    width: 100%;
+    clear:both;
     padding-top:20px;
 }
