Fixed issue with footer not sticking to bottom of page. Added weather details to daily schedule cards.

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -63,7 +63,7 @@
                 </a>
             </div>
             <div class="col-md-3 col-sm-6 col-xs-12">
-                <a th:href="@{|/team/${'CWS'}/${145}|}"><img th:src="@{/assets/img/CWS.png}" class="img-thumbnail" data-toggle="tooltip" data-placement="top" title="Chicago Whitesox">
+                <a th:href="@{|/team/${'CHW'}/${145}|}"><img th:src="@{/assets/img/CWS.png}" class="img-thumbnail" data-toggle="tooltip" data-placement="top" title="Chicago Whitesox">
                 </a>
             </div>
             <div class="col-md-3 col-sm-6 col-xs-12">
@@ -192,6 +192,7 @@
 </div>
 
 <footer th:replace="layout :: footer"></footer>
+
 </body>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
