--- a/src/main/resources/static/assets/css/styles.css
+++ b/src/main/resources/static/assets/css/styles.css
@@ -8,10 +8,11 @@ body {
     padding-bottom: 60px;
 }
 
-footer {
-    position: relative;
-    margin-top: -10px; /* negative value of footer height */
+.footer {
+    position: fixed;
+    bottom: 0;
+    width: 100%;
     height: 60px;
-    clear:both;
-    padding-top:20px;
+    line-height: 60px;
+    background-color: #f5f5f5;
 }
