--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -26,9 +26,11 @@
 </nav>
 
 <!-- Footer -->
-<footer  style="background-color: #007bff; color: white" th:fragment="footer">
-    <div class="footer-copyright text-center py-3">Disclaimer: This site is not intended for commercial use and all team logos
-        are property of the respective organizations.</div>
+<footer class="footer" style="background-color: #343a40!important; color: white" th:fragment="footer">
+    <div class="container text-center">
+        <span>Disclaimer: This site is not intended for commercial use and all team logos
+            are property of the respective organizations.</span>
+    </div>
 </footer>
 <!-- Footer -->
 </body>
